VKPHTDEV-423 notification orgstructure reformat